--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <i class="fas fa-shopping-cart"></i>
             </button>
         </div>
+
     </header>
 
     <section class="Home" id="home">
@@ -297,6 +298,10 @@
         </div>
     </section>
 
+    <section class="bottom">
+        gf
+    </section>
+
     <footer>
         <h3> 2021 Netlify</h3>
         <p>javohirhasanov2021</p>
@@ -323,6 +328,8 @@
             </div>
         </a>
     </footer>
+
+
 </body>
 <script src="main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
