--- a/index.html
+++ b/index.html
@@ -299,7 +299,20 @@
     </section>
 
     <section class="bottom">
-        gf
+        <ul>
+            <li>
+                <button class="actives"><a href="#home">Home</a></button>
+            </li>
+            <li>
+                <button class="actives"><a href="#about">About</a></button>
+            </li>
+            <li>
+                <button class="actives"><a href="#menu">Home</a></button>
+            </li>
+            <li>
+                <button class="actives"><a href="#testemenu">Home</a></button>
+            </li>
+        </ul>
     </section>
 
     <footer>
