--- a/index.html
+++ b/index.html
@@ -301,16 +301,16 @@
     <section class="bottom">
         <ul>
             <li>
-                <button class="actives"><a href="#home">Home</a></button>
+                <button class="actives"><a href="#home"><i class="fas fa-home"></i></a></button>
             </li>
             <li>
-                <button class="actives"><a href="#about">About</a></button>
+                <button class="actives"><a href="#about"><i class="fas fa-fax"></i></a></button>
             </li>
             <li>
-                <button class="actives"><a href="#menu">Home</a></button>
+                <button class="actives"><a href="#menu"><i class="far fa-address-book"></i></a></button>
             </li>
             <li>
-                <button class="actives"><a href="#testemenu">Home</a></button>
+                <button class="actives"><a href="#testemenu"><i class="fas fa-phone-alt"></i></a></button>
             </li>
         </ul>
     </section>
